--- a/Login-Signup.html
+++ b/Login-Signup.html
@@ -201,7 +201,7 @@
             var email = document.getElementById('emailinp1').value;
             localStorage.setItem('userEmail', email);
 
-            window.location.href = 'IRCTC_Main_Page.html';
+            window.location.href = 'index.html';
         });
     </script>
 
