--- a/login.html
+++ b/login.html
@@ -275,7 +275,7 @@
                     return;
                 }
                 localStorage.setItem('newUserEmail', email2);
-                window.location.href = 'IRCTC Main Page.html';
+                window.location.href = 'irctc.html';
             } else {
                 // Neither section is fully filled
                 alert('Please fill in either the Existing User or New User section.');
